[project]
name = "ai-interviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.7.5",
    "autogen-core>=0.7.5",
    "autogen-ext>=0.7.5",
    "dotenv>=0.9.9",
    "pydantic>=2.12.5",
    "tiktoken>=0.12.0",
]
